# RestAdviser_test_task

./: README.md  docker-compose.yml
main/: Dockerfile  pyproject.toml
main/app/: main.py
main/app/adapters/: __init__.py  framework.py  lrs_strategy.py  sma_strategy.py
main/app/adapters/strategy_data/: model.sav
main/app/api/: api.py
main/app/api/endpoints/: signal.py
main/app/config/: settings.py
main/app/schemas/: __init__.py  logger.py  signal.py  strategy.py
main/app/services/: __init__.py  signal.py
