[tool.poetry]
name = "restadviser-test"
version = "0.1.0"
description = "Test task for RestAdvisor"
authors = ["Vadim Rusakov <rusakov.vadim.94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
requests = "^2.28.2"
joblib = "^1.2.0"
numpy = "^1.24.1"
scikit-learn = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
